# webauthn-custom-extension

./: .gitignore  README.md  Taskfile.yml
.github/workflows/: backend.yml  frontend.yml
backend/: pyproject.toml
backend/apps/extension_server/src/: config.py  main.py
backend/apps/passkey_server/src/: config.py  main.py
backend/tests/extension_server/: test_main.py
backend/tests/passkey_server/: test_main.py
diagrams/: sequence.puml
frontend/passkey_web/: .env.sample  eslint.config.js  index.html  package-lock.json  package.json  styles.css  vitest.config.js
frontend/passkey_web/src/: dom.js  dom.test.js  main.js
